minikube/simple-ingress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:  # All the pods with this label will be included in the Service
    app: nginx
  ports: 
  # The Pod's port 80 will be mapped to the Service's 80 port
    - port: 80
      targetPort: http
