minikube/simple-ingress/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec: 
  rules:
    - host: www.example.com # Set the hostname
      http:
        paths:
          # For this specific path redirect traffic to the "hello" Service
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
